--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,8 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>hackernews</finalName>
+		<finalName>graphql-java-hackernews</finalName>
 		<plugins>
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.4.6.v20170531</version>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -63,6 +58,12 @@
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.1.0</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.4.6.v20170531</version>
 			</plugin>
 		</plugins>
 	</build>
